[gd_scene load_steps=2 format=3 uid="uid://j24tbbn6nn3a"]

[ext_resource type="Script" path="res://scripts/player_damage_zone.gd" id="1_o0ua2"]

[node name="PlayerDamageZone" type="Area2D"]
script = ExtResource("1_o0ua2")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
